Changes to data loading
* Make dataset specification centred around Dataset
  instead of DataLoader

* Allow multiple network inputs including nested objects

--- a/config.json
+++ b/config.json
@@ -1,19 +1,15 @@
 {
     "name": "Mnist_LeNet",
     "n_gpu": 1,
+    "batch_size": 12,
 
     "arch": {
         "type": "MnistModel",
-        "args": {}
+        "args": {"num_classes": 1}
     },
-    "data_loader": {
-        "type": "MnistDataLoader",
+    "dataset": {
+        "type": "MyDataset",
         "args":{
-            "data_dir": "data/",
-            "batch_size": 128,
-            "shuffle": true,
-            "validation_split": 0.1,
-            "num_workers": 2
         }
     },
     "optimizer": {
@@ -24,9 +20,8 @@
             "amsgrad": true
         }
     },
-    "loss": "nll_loss",
+    "loss": "binary_cross_entropy",
     "metrics": [
-        "accuracy", "top_k_acc"
     ],
     "lr_scheduler": {
         "type": "StepLR",
