--- a/config.json
+++ b/config.json
@@ -1,7 +1,7 @@
 {
     "name": "Mnist_LeNet",
     "n_gpu": 1,
-    "batch_size": 12,
+    "batch_size": 12, // test comment
 
     "arch": {
         "type": "MnistModel",
